--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/cloudsbackround1"
     android:layout_height="match_parent"
     tools:context=".StarFighter_MainActivity">
 
@@ -12,37 +13,30 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="250dp"
         android:layout_height="75dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="168dp"
+        android:fontFamily="@font/audiowide"
         android:gravity="center"
         android:text="Play"
         android:textSize="25dp"
-        android:fontFamily="@font/audiowide"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/id_stop_button"
-        android:fontFamily="@font/audiowide"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="250dp"
         android:layout_height="75dp"
+        android:layout_marginTop="96dp"
+        android:fontFamily="@font/audiowide"
         android:text="Stop"
         android:textSize="25dp"
-        android:layout_marginTop="44dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/id_play_button" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/todo"
-        android:src="@drawable/ic_weather_app"
-        tools:layout_editor_absoluteX="-187dp"
-        tools:layout_editor_absoluteY="29dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
